# pytorch3d

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: build.yml  wheels.yml
pytorch3d/: __init__.py
scripts/: rename_distribution.py
